# mios

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analysis_results.md  conanfile.txt  configure.sh  copy.sh  dev_install.sh  install.sh  make_light_version.sh  robot_install.sh  start.py
core/: CMakeLists.txt
core/include/core/: core.hpp  telemetry_client.hpp
core/src/: core.cpp  telemetry_client.cpp
interface/: CMakeLists.txt
interface/include/interface/: interface.hpp  parameter_server.hpp  ros_node.hpp  rpc_server.hpp  sim_interface.hpp  ws_server.hpp
interface/src/: interface.cpp  main.cpp  parameter_server.cpp  ros_node.cpp  rpc_server.cpp  sim_interface.cpp  ws_server.cpp
knowledge_base/: CMakeLists.txt
knowledge_base/include/knowledge_base/: concepts.hpp  knowledge_base.hpp  local_memory.hpp
knowledge_base/src/: concepts.cpp  knowledge_base.cpp  local_memory.cpp
led_pattern/: CMakeLists.txt
led_pattern/include/led_pattern/: header_led_patterns.hpp  led_pattern.hpp
led_pattern/include/patterns/: pattern_custom.hpp  pattern_disappointment.hpp  pattern_interactive.hpp  pattern_rehab.hpp  pattern_status.hpp  pattern_success.hpp  pattern_white.hpp
led_pattern/src/: led_pattern.cpp
led_pattern/src/patterns/: pattern_custom.cpp  pattern_disappointment.cpp  pattern_interactive.cpp  pattern_rehab.cpp  pattern_status.cpp  pattern_success.cpp  pattern_white.cpp
manipulation_primitive/: CMakeLists.txt
manipulation_primitive/include/manipulation_primitive/: manipulation_primitive.hpp
manipulation_primitive/include/primitives/: mp_basic.hpp  mp_basic_joint.hpp  mp_external.hpp  mp_force_basis.hpp  mp_telepresence.hpp  nullprimitive.hpp
manipulation_primitive/include/strategy/: primitive_strategy.hpp
manipulation_primitive/src/: manipulation_primitive.cpp  primitive_strategy.cpp
manipulation_primitive/src/primitives/: mp_basic.cpp  mp_basic_joint.cpp  mp_external.cpp  mp_force_basis.cpp  mp_telepresence.cpp  (+1 more)
ml_service/: README.md  animation_automatika.py  automatica_demo.py  charlie_rest.py  cost_screening.py  definitions.py  demo.py  demo2.py  demo_learning.py  dual_arm_demo.py  example_learning.py  friday.txt  get_leaner_data.py  hehe.txt  iros.py  main.py  ml_service.py  new_charlie.py  old_demo.py  pitstop_alpha.py  pitstop_bravo.py  pitstop_charlie.py  plotting.py  plotting2.py  pyproject.toml  pytest.ini  rest_single_test.py  run_collective_experiments.py  run_experiments.py  skill_test.py  start_interface.py  system_test.py  test_experiment.py
ml_service/collective_manager/: collective_manager.py  learning_config.py
ml_service/database/: database.py
ml_service/definitions/: benchmark_definitions.py  cost_functions.py  definitions_base.py  insertion_definitions.py  service_configs.py  taxonomy_templates.py  templates.py
ml_service/engine/: engine.py  task_result.py
ml_service/experiments/: analysis.py  collective.py  collective_learning.py  collective_learning_test.py  config.py  experiment_base.py  general_skills.py  insertion.py  robot_control.py  transfer.py
ml_service/interface/: data_buffer.py  interface.py  redis_connection.py
ml_service/knowledge_processor/: dict_knowledge_store.py  kg_k_neighbors.py  kg_linear_regression.py  kg_mlp.py  kg_random_forest.py  kg_svm.py  knowledge_manager.py  knowledge_processor.py  knowledge_processor_base.py  knowledge_processor_v2.py  knowledge_store.py  mongo_knowledge_store.py
ml_service/load_balancer/: load_balancer.py
ml_service/mongodb_client/: mongodb_client.py
ml_service/plotting/: data_acquisition.py  data_processor.py  demo_plotter.py  live_plotter.py  plotter.py  result.py
ml_service/problem_definition/: domain.py  problem_definition.py
ml_service/rpc_visualization/: DataBuffer.py  UDP_test_client.py  data_buffer.py  switcher.py
ml_service/services/: base_service.py  basinhopping.py  cmaes.py  concrete_services.py  generic_optimizer.py  gradient_descent.py  knowledge.py  orig_psp.py  svm.py
ml_service/task_scheduler/: creation_pipeline.py  task_scheduler.py
ml_service/tests/: conftest.py
ml_service/utils/: cmd_loop.py  database.py  databuffer.py  exception.py  experiment_wizard.py  helper_functions.py  mios_errors.py  taxonomy_utils.py  udp_client.py  ws_client.py  ws_global_loop.py
skill/: CMakeLists.txt
skill/descriptions/: button_pushing.json  external_input.json  extraction.json  follow_trajectory.json  gesture_haptic.json  hand_guiding.json  hold_pose.json  insertion.json  learner_test_skill.json  ml_test_skill.json  motions_generic_wiggle.json  move_to_contact.json  move_to_pose.json  move_to_pose_cart.json  move_to_pose_joint.json  polish.json  push.json  swiping.json  telepresence_master.json  telepresence_slave.json  test_skill_1.json  turn.json
skill/src/: skill.cpp  skill_engine.cpp  skill_factory.cpp  skill_library.cpp
src/: CMakeLists.txt
src/controller_pipeline/: CMakeLists.txt
src/core/: CMakeLists.txt
src/interface/: CMakeLists.txt
src/learning_module/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/main/: CMakeLists.txt
src/manipulation_primitive/: CMakeLists.txt
src/memory/: CMakeLists.txt
src/panda/: CMakeLists.txt
src/portal/: CMakeLists.txt
src/safety/: CMakeLists.txt
src/skill/: CMakeLists.txt
src/task/: CMakeLists.txt
src/telemetry/: CMakeLists.txt
src/utils/: CMakeLists.txt
task/: CMakeLists.txt
task/descriptions/: external.json  extract_object.json  feature_collision_detection.json  feature_force_control.json  feature_impedance.json  fetch_object.json  gesture.json  guiding_mode.json  handover_object.json  idle_task.json  insert_object.json  learner_test.json  locate_object.json  move_to_cart_pose.json  move_to_joint_pose.json  move_to_location.json  move_trajectory.json  move_until_contact.json  observe.json  open_lock.json  place_object.json  polish_object.json  push_button.json  react_to_event.json  swipe.json  telepresence.json  test_task_1.json  test_task_2.json  test_task_3.json
task/src/: task.cpp  task_engine.cpp  task_handler.cpp  task_list.cpp  taskfactory.cpp
(+1134 files in other folders)
