[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deap>=1.4.3",
    "numpy>=2.2.6",
    "pydoe>=0.3.8",
    "pymongo>=4.15.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "websockets>=15.0.1",
]
