[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mios-ml-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pymongo>=4.6",
    "redis>=5.0",
    "websockets>=13.0",
    "pyDOE3>=1.0",
    "deap>=1.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mongomock>=4.1",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    ".venv",
    ".pytest_cache",
    ".cache*",
    "__pycache__",
]
