add_subdirectory(core)
add_subdirectory(controller_pipeline)
#add_subdirectory(event_publisher)
add_subdirectory(interface)
add_subdirectory(learning_module)
add_subdirectory(libraries)
add_subdirectory(main)
add_subdirectory(manipulation_primitive)
add_subdirectory(memory)
add_subdirectory(panda)
add_subdirectory(plugins)
add_subdirectory(portal)
add_subdirectory(safety)
add_subdirectory(skill)
add_subdirectory(task)
add_subdirectory(telemetry)
add_subdirectory(utils)
